# 2023-s1-ci

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  cache_cleaning.yml  coverage.yml  lint.yml
simple_web_app/: exceptions.py  main.py  manage.py  models.py  requirements.txt  string_validators.py  test_api.py  test_digit_validator.py  test_length_validator.py  test_main.py  test_unit.py
simple_web_app/.deta/: prog_info
simple_web_app/polls/: math_engine.py  models.py  tests.py  views.py
simple_web_app/polls/migrations/: 0001_initial.py
simple_web_app/polls/templates/: detail.html  index.html
simple_web_app/polls/tests/: test_engine.py  test_models.py
simple_web_app/simple_web_app/: asgi.py  settings.py  urls.py  wsgi.py
simple_web_app/tests/: test_api.py  test_digit_validator.py  test_length_validator.py
