[tool.poetry]
name = "ci-example"
version = "0.1.0"
description = "a project to support continuous integration classes"
authors = ["André Portela <portela.eng@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ci_example"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
coverage = "^6.5.0"
pytest = "^7.2.0"
httpx = "^0.23.0"
flake8-bugbear = "^22.10.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
